[gd_scene load_steps=34 format=3 uid="uid://djbxm66ad3ocs"]

[ext_resource type="Script" path="res://Scripts/Goblin.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://m3cmx0jnub14" path="res://Images/Goblin.png" id="2"]
[ext_resource type="PackedScene" uid="uid://bvrmf2ave4myr" path="res://Scenes/MobAudioController.tscn" id="3"]
[ext_resource type="AudioStream" uid="uid://d24s4oiwhhgdv" path="res://Audio/Poo Farmer Goblin Laugh 1.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://bdfb88nwirxhu" path="res://Audio/Poo Farmer Goblin Attack.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://bmlygsmnmhrpe" path="res://Audio/Poo Farmer Goblin Laugh 2.wav" id="6"]
[ext_resource type="Texture2D" uid="uid://cv3us5c0qdh8a" path="res://Images/goblin-death.png" id="7"]

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("7")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("7")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("7")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("7")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("7")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("7")
region = Rect2(160, 0, 32, 16)

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("2")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("2")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("2")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("2")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("2")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("2")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("2")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("2")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("2")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("2")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("2")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("2")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("2")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("2")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("2")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("2")
region = Rect2(48, 64, 16, 32)

[sub_resource type="SpriteFrames" id="17"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}, {
"duration": 1.0,
"texture": SubResource("23")
}, {
"duration": 1.0,
"texture": SubResource("24")
}, {
"duration": 1.0,
"texture": SubResource("25")
}, {
"duration": 1.0,
"texture": SubResource("26")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}],
"loop": true,
"name": &"down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}],
"loop": true,
"name": &"left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}],
"loop": true,
"name": &"right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}, {
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}],
"loop": true,
"name": &"up",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="18"]
size = Vector2(12, 13.5)

[sub_resource type="CircleShape2D" id="19"]
radius = 46.0

[sub_resource type="RectangleShape2D" id="20"]
size = Vector2(12, 13.5)

[node name="Goblin" type="CharacterBody2D" groups=["enemy", "goblin"]]
collision_layer = 8
collision_mask = 52
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("17")
animation = &"down"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("18")

[node name="Visibility" type="Area2D" parent="."]
scale = Vector2(3, 3)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
position = Vector2(0, 3.66667)
shape = SubResource("19")

[node name="PooPickupDetection" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="PooPickupDetection"]
position = Vector2(0, 11)
shape = SubResource("20")

[node name="StealTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="MobAudioController" parent="." instance=ExtResource("3")]
next_behavior_min = 30.0
next_behavior_max = 90.0
actions = Array[AudioStream]([ExtResource("5")])
behaviors = Array[AudioStream]([ExtResource("4"), ExtResource("6")])

[node name="HitFeedbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Visibility" to="." method="_on_Visibility_area_entered"]
[connection signal="area_exited" from="Visibility" to="." method="_on_Visibility_area_exited"]
[connection signal="area_entered" from="PooPickupDetection" to="." method="_on_PooPickupDetection_area_entered"]
[connection signal="timeout" from="StealTimer" to="." method="_on_StealTimer_timeout"]
